...

    var title: String {
        switch self {
        case .community: "Community"
        case .map: "Map"
        case .biteTime: "BiteTime"
        case .you: "You"
        }
    }

    var systemImage: String {
        switch self {
        case .community: "person.3.fill"
...
